# poetry2nix

tests/: default.nix
tests/git-deps/: pyproject.toml
