[tool.poetry]
name = "git-deps"
version = "0.1.0"
description = "poetry2nix test"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
research-utils = { git = "ssh://git@git.neuropace.com:7999/rs-utils/research-utils.git" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
